✨ | add login register
