# routes/api.php
@@ -8,6 +8,16 @@ use App\Http\Controllers\PowerController;
 use App\Http\Controllers\TeamController;
 use App\Http\Controllers\CityController;
 
+
+use App\Http\Controllers\Auth\AuthenticatedSessionController;
+use App\Http\Controllers\Auth\EmailVerificationNotificationController;
+use App\Http\Controllers\Auth\NewPasswordController;
+use App\Http\Controllers\Auth\PasswordResetLinkController;
+use App\Http\Controllers\Auth\RegisteredUserController;
+use App\Http\Controllers\Auth\VerifyEmailController;
+
+
+
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -25,8 +35,11 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::get('/endpoint', [ApiController::class, 'index']);
 
-Route::get('/hero', [HeroController::class, 'index']);
-Route::get('/hero/{id}', [HeroController::class, 'show']);
+Route::get('/hero', [HeroController::class, 'index'])
+    ->middleware('auth:sanctum');
+
+Route::get('/hero/{id}', [HeroController::class, 'show'])
+    ->middleware('auth:sanctum');
 
 Route::get('/power', [PowerController::class,'index']);
 Route::get('/power/{id}', [PowerController::class,'show']);
@@ -39,3 +52,32 @@ Route::get('/city/{id}', [CityController::class,'show']);
 
 Route::get('/city/{id}/hero', [CityController::class,'showHero']);
 
+
+
+Route::post('/register', [RegisteredUserController::class, 'store'])
+                ->middleware('guest')
+                ->name('register');
+
+Route::post('/login', [AuthenticatedSessionController::class, 'store'])
+                ->middleware('guest')
+                ->name('login');
+
+Route::post('/forgot-password', [PasswordResetLinkController::class, 'store'])
+                ->middleware('guest')
+                ->name('password.email');
+
+Route::post('/reset-password', [NewPasswordController::class, 'store'])
+                ->middleware('guest')
+                ->name('password.store');
+
+Route::get('/verify-email/{id}/{hash}', VerifyEmailController::class)
+                ->middleware(['auth', 'signed', 'throttle:6,1'])
+                ->name('verification.verify');
+
+Route::post('/email/verification-notification', [EmailVerificationNotificationController::class, 'store'])
+                ->middleware(['auth', 'throttle:6,1'])
+                ->name('verification.send');
+
+Route::post('/logout', [AuthenticatedSessionController::class, 'destroy'])
+                ->middleware('auth')
+                ->name('logout');
